# Ai-Medical-chatbot

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  REPORT.md  USER_ACQUISITION_STRATEGY.md  app.py  pyproject.toml  requirements.txt
chatbot/: diagnosis.py
issue_templates/: Bug.md
logs/: user_logs.csv
